# elm-package-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  justfile  package.json
.claude/commands/: changelog.md  release.md
.github/: dependabot.yml
.github/workflows/: ci.yml  manual-release.yml  nightly.yml  release.yml  tagged-release.yml
e2e/: test.py
src/: lib.rs  main.rs
src/elm/: fetcher.rs  mod.rs  reader.rs  search.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs  types.rs  utilities.rs
tests/: test_exports.rs
tests/fixture/: elm-review-docs.json
