[package]
name = "elm-package-mcp-server"
version = "0.5.1"
edition = "2021"
authors = ["Casey Webb <casey@dirtbag.social>"]
description = "Model Context Protocol (MCP) server for Elm language package documentation. Provides tools to list Elm packages from elm.json and fetch README/API docs from package.elm-lang.org"
keywords = ["elm", "elm-lang", "mcp", "documentation", "package-manager"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "elm-package-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
url = { version = "2.5", features = ["serde"] }
rpc-router = "0.1.3"
maplit = "1"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
signal-hook = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
nucleo-matcher = "0.3"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
